# harvester

./: .dockerignore  .env  .env.test  .gitignore  .mise.toml  Cargo.toml  Dockerfile  Gemfile  Makefile  README.md  docker-compose.yml  init.sql
.github/: dependabot.yml
.sqlx/: query-05813c1ce30eec9a6b5913dba7171a1fac801fa6baa6f417c0e8fe0c5af9c9a5.json  query-0f4e31787fc9275b84c93f4b31092ff8d132fe21866dd04298fa9b16046cf439.json  query-159c037dcf9818cef55ea8286241a2c61584c7e0a8ca051ecad97d85588e3473.json  query-1601481613eeaad7efc59442f42ecb86f10467626d4ac8616767f1bd8ce7741e.json  query-1f9eb9a76b5b8129a1ce59e0d7ddd60453347531d71544b9f121a104a5f12b13.json  query-4e1151847bdbdbce5efac3c0329cc05a7ad60df211c610e55962c6f2f975c93f.json  query-756354e496028f74b032c3bae6a3a7d71cef3b068c162167cee99feca48e80be.json  query-7a152794844378b84d4b6d20697378142553052c0c306de4a8491defd02cfc36.json  query-8d49107809fc82cb022a454498c8aa8896710c5c3c64b98ea4558fb0bef781e7.json  query-9c4e556e073324d260f9070eab912616e7b8d2953e134c8eb59b67b4539fbbfd.json  query-a453c84b5a9889f72905bd5a04baa9234fad9e54a043932e32638395c8c3065b.json  query-a4fd9cab83cb4560039b0d95aa3c80f38cc719fea05c55458fbb78694576dc31.json  query-ace2a2e72ed43b942c38c6df8cb1dd1c7bbc6885687aa7474cd2a5095c6ef22b.json  query-afa0a1ea8293b5297286e2ab117e388705b64c21496b96310808de2cc3505bb6.json  query-b74ccfaed062c2332e25c40a91453e148c882f6589fc758909996d7bcc9e2ea7.json  query-c4bbbceb9ec74bd72fe64c6b9573644f586e9c92db7ed59c4ef7143e6d074e6b.json  query-c718ae792caf19423865497333cd458b8ba93e81d49db7d44a67a30e027bcfb0.json  query-cac3f7a7660c97481f9e3a859a5d657af0dc6e207041885b7b28bed74a744476.json  query-cc61d910c746e5289bfa748f988f4d7bada94df6bee40f6d3e5e0d55b4e670d5.json  query-d490567f41cfe60971e09b5e1279b36429dca383f19d9aa79327934cfae47838.json  query-eaff5868a3357b79ec1de070b9958ff0c3bf54802e2c0fd13507ba5dd653bfd8.json  query-f8d8da9f19cc40117a9a7a775790bccc8461f842a0b7df75310ee0bc70b581c9.json
fixtures/: ead.xml  rules.txt
migrations/: 20260107013330_create_oai_records_table.down.sql  20260107013330_create_oai_records_table.up.sql  20260214162800_add_index_lifecycle_columns.down.sql  (+7 more)
(+44 files in other folders)
