[package]
name = "harvester"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive", "env"] }
csv = "1.4.0"
futures = "0.3.31"
oai-pmh = "0.3.0"
reqwest = "0.13.1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
quick-xml = "0.39.0"
serde_json = "1.0.149"
rand = "0.9.2"
shellexpand = "3"

[package.metadata.sqlx]
migrations = "migrations"
offline = true

[profile.release]
lto = true
codegen-units = 1
strip = true
