[package]
name = "harvester"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dotenvy = "0.15"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive", "env"] }
csv = "1.4.0"
futures = "0.3.32"
oai-pmh = "0.5.1"
quick-xml = "0.41.0"
rand = "0.10.1"
reqwest = "0.13.4"
serde_json = "1.0.150"
shellexpand = "3"
sqlx = { version = "0.9.0", features = [
  "postgres",
  "runtime-tokio",
  "macros",
  "migrate",
  "tls-rustls",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package.metadata.sqlx]
migrations = "migrations"
offline = true

[profile.release]
lto = true
codegen-units = 1
strip = true
